k8/minio/minio.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minio
  labels:
    app: minio
    role: service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
      role: service
  serviceName: minio
  template:
    metadata:
      labels:
        app: minio
        role: service
    spec:
      containers:
        - name: minio
          image: quay.io/minio/minio:RELEASE.2022-09-25T15-44-53Z
          args: ["server","--console-address", ":9001", "/data"]
          ports:
            - name: minio
              containerPort: 9000
            - name: console
              containerPort: 9001
          volumeMounts:
            - name: minio
              mountPath: /data
      volumes:
        - name: minio
          persistentVolumeClaim:
            claimName: minio
---
apiVersion: v1
kind: Service
metadata:
  name: minio
  labels:
    app: minio
    role: service
spec:
  selector:
    app: minio
    role: service
  type: NodePort
  ports:
    - name: minio
      port: 9000
      targetPort: 9000
      protocol: TCP
    - name: console
      port: 9001
      targetPort: 9001
      protocol: TCP
